test/implicitDup19.slq
def foo(x:ğ”¹,const cond:ğ”¹){
	y:=dup(x);
	z:=0;
	if cond{
		a:=y;
		b:=y; /// TODO error
	}else{
		x:=H(x);
		a:=y;
		b:=y; /// error
	}
	return (x,a,b);
}
